--- a/English word/영어 단어.md
+++ b/English word/영어 단어.md
@@ -1,4 +1,4 @@
-# error 관련 영어 단어
+# 영어 단어
 
 | 명사 | n |
 | --- | --- |
@@ -14,17 +14,17 @@
 | express | V / a | 나타내다, 표(현)하다  / 급행의, 신속한 |
 | current | a / n |  현재의, 지금의 / 흐름 |
 | refer to | V | 참조하다 , 인용하다 |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
-|  |  |  |
+| Configuration | n | • 환경 설정 , 배열 |
+| transaction | n |  처리 |
+| thread | n |  가닥, 맥락 |
+| persist | V |  지속하다 |
+| encounter | V / n |  맞닥뜨리다, 발생하다 / 만남, 접촉, 조우, 발생 |
+| validate | V |  입증하다 , 승인하다 |
+|  |  |   |
+|  |  |   |
+|  |  |   |
+|  |  |   |
+|  |  |   |
+|  |  |   |
+|  |  |   |
+|  |  |   |
